@@ -71,7 +71,7 @@ NewClassCreationWizardPage.warning.ClassNameDiscouraged=Class name is discourage
 
 NewClassCreationWizardPage.baseClasses.label=&Base Classes:
 NewClassCreationWizardPage.error.InvalidBaseClassName=Base class name is not valid. {0}.
-NewClassCreationWizardPage.warning.BaseClassNotExistsInProject=Base class ''{0}'' not in include paths for current project.
+NewClassCreationWizardPage.error.BaseClassNotExistsInProject=Base class ''{0}'' not in include paths for current project.
 
 NewClassCreationWizardPage.methodStubs.label=Method &Stubs:
 
